# pavo

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_ja.md  lcov.info
.github/workflows/: coverage.yml  release.yml  test.yml
src/: cli.rs  config.rs  entry.rs  lib.rs  main.rs  path_display.rs  pavo.rs  preview.rs  ratatui_ui.rs  shell.rs  skim_proxy.rs  test_helper.rs  tui.rs
src/entry/: directory.rs  file.rs  repository.rs
src/preview/: formatters.rs  repository_preview.rs
src/tui/: app.rs  event.rs  focus.rs  runner.rs  ui.rs
tests/: integration_test.rs
