[package]
name = "path-hopper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
git2 = "0.19.0"
skim = "0.16"
ansi_term = "0.12.1"
chrono = "0.4.31"
bat = { version = "0.25.0", features = ["minimal-application"] }

[dev-dependencies]
tempfile = "3.8.0"
pretty_assertions = "1.4.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
