[package]
name = "pavo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
git2 = "0.19.0"
ansi_term = "0.12.1"
chrono = { version = "0.4.31", features = ["serde"] }
bat = { version = "0.25.0", features = ["minimal-application"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = "0.26"

[dev-dependencies]
tempfile = "3.8.0"
pretty_assertions = "1.4.0"
assert_cmd = "2.0.16"
predicates = "3.0.4"
rexpect = "0.6.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
